Fix UT for XMLMapper under JDK9